Fixed contrast text on main slider image.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -47,6 +47,8 @@ body p {
 .app > footer {
     grid-area: footer;
 }
+
+
 /*--Header Styling--*/
 header {
     flex-grow: 0;
@@ -277,6 +279,7 @@ main {
     padding: 10px 20px;
     border-radius: 5px;
     color: #fff;
+    background-color: #0d3e5f;
 }
   
 .overlay-link {
@@ -398,12 +401,6 @@ main {
     grid-column: 1 / 3;
     grid-row: 5 / 6;
 }
-
-
-
-
-
-
 
 .newsRelease {
     border-style: solid;
