--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -51,12 +51,14 @@ main {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     margin: .5rem;
+    max-width: 1400px;
+    justify-self: center;
 }
 
 .hero-carousel {
     grid-column: 2 / 4;
     grid-row: 1 / 3;
-    max-height: 500px;
+    max-height: 600px;
 }
 
 .slide {
@@ -66,7 +68,7 @@ main {
 
 .slide img {
     height: auto;
-    min-height: 500px;
+    min-height: 600px;
     width: 100%;
     object-fit: cover;
 }
